<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/first_name"
                    android:id="@+id/etFirstName" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/last_name"
                    android:id="@+id/etLastName" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:id="@+id/etEmail" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save_contact"
                    android:id="@+id/btnSaveContact"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etFirstNameSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"/>

                    <EditText
                        android:id="@+id/etLastNameSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"/>

                    <EditText
                        android:id="@+id/etEmailSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"/>

                    <Button
                        android:id="@+id/btnSearchContacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_search_contact"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etFirstNameUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"/>

                    <EditText
                        android:id="@+id/etLastNameUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"/>

                    <EditText
                        android:id="@+id/etEmailUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"/>

                    <Button
                        android:id="@+id/btnUpdateContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/update_btn_text"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/etFirstNameDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"/>

                    <EditText
                        android:id="@+id/etLastNameDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"/>

                    <EditText
                        android:id="@+id/etEmailDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"/>

                    <Button
                        android:id="@+id/btnDeleteContact"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/delete_btn_text"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnShowContacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/show_contacts"/>

                    <Button
                        android:id="@+id/btnUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/btnShowContacts"
                        android:text="@string/upload_button_text"/>

                    <EditText
                        android:id="@+id/tvVolleyResults"
                        android:layout_below="@+id/btnShowContacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/ivNetworkImage"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/sts_logo_original"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>