<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.score.sts.CreateAccountFrag">

    <TextView
        android:id="@+id/tvAppNameLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/deep_orange_900"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

</LinearLayout>
